--- a/Conversor_de_Moedas/app/src/main/res/layout/activity_main.xml
+++ b/Conversor_de_Moedas/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#326F32"
     tools:context=".Actives.MainActivity">
 
     <Button
         android:id="@+id/btn_moeda_origem"
         android:layout_width="267dp"
         android:layout_height="46dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="36dp"
         android:text="Indique a moeda de origem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,7 @@
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:textAlignment="textEnd"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -49,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="Valor convertido"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Conversor de Moeda"
+        android:textColor="@android:color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Valor"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/edt_valor"
         app:layout_constraintStart_toStartOf="@+id/edt_valor" />
 
@@ -80,6 +85,7 @@
         android:id="@+id/txt_moeda_origem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="@+id/btn_moeda_origem"
         app:layout_constraintTop_toBottomOf="@+id/btn_moeda_origem" />
 
@@ -87,6 +93,7 @@
         android:id="@+id/txt_moeda_destino"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="@+id/btn_destino"
         app:layout_constraintTop_toBottomOf="@+id/btn_destino" />
 
@@ -108,6 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
